@@ -3,7 +3,7 @@
 	male_ruler = "RULER_TITLE_DALAI_LAMA"
 	female_ruler = ""	# Empty on purpose
 	possible = {
-		has_law = law_type:law_theocracy
+		has_law_or_variant = law_type:law_theocracy
 		exists = c:TIB
 		c:TIB = ROOT
 		OR = {
