@@ -1,0 +1,84 @@
+﻿gov_confucian_theocracy = {
+	transfer_of_power = dictatorial
+	male_ruler = "RULER_TITLE_SON_OF_HEAVEN"
+	female_ruler = "RULER_TITLE_DAUGHTER_OF_HEAVEN"
+	male_heir = "RULER_TITLE_GONGZI"
+	female_heir = "RULER_TITLE_GONGZI"
+	possible = {
+		has_law_or_variant = law_type:law_theocracy
+		exists = c:CHI
+		c:CHI = ROOT
+		has_state_religion = religion:confucian
+	}
+	on_government_type_change = {
+		change_to_dictatorial = yes
+	}
+	on_post_government_type_change = {
+		post_change_to_dictatorial = yes
+	}
+}
+
+gov_china_feudal_empire = {
+	transfer_of_power = hereditary
+
+	male_ruler = "RULER_TITLE_SON_OF_HEAVEN"
+	female_ruler = "RULER_TITLE_DAUGHTER_OF_HEAVEN"
+
+	male_heir = "RULER_TITLE_PRINCE"
+	female_heir = "RULER_TITLE_PRINCESS"
+
+	possible = {
+		has_law_or_variant = law_type:law_monarchy
+		country_has_voting_franchise = no
+		has_state_religion = religion:confucian
+		NOT = {
+			has_law_or_variant = law_type:law_technocracy
+		}
+		has_law_or_variant = law_type:law_serfdom
+
+		OR = {
+			country_tier = hegemony
+			country_tier = empire
+		}
+	}
+
+	on_government_type_change = {
+		change_to_hereditary = yes
+	}
+	on_post_government_type_change = {
+		post_change_to_hereditary = yes
+	}
+}
+
+
+gov_china_feudal_kingdom = {
+	transfer_of_power = hereditary
+
+	male_ruler = "RULER_TITLE_ZHUHOU"
+	female_ruler = "RULER_TITLE_ZHUHOU"
+
+	male_heir = "RULER_TITLE_GONGZI"
+	female_heir = "RULER_TITLE_GONGZI"
+
+	possible = {
+		has_law_or_variant = law_type:law_monarchy
+		country_has_voting_franchise = no
+		has_state_religion = religion:confucian
+		NOT = {
+			has_law_or_variant = law_type:law_technocracy
+		}
+		has_law_or_variant = law_type:law_serfdom
+		OR = {
+			country_tier = kingdom
+			country_tier = principality
+			country_tier = city_state
+		}
+	}
+
+	on_government_type_change = {
+		change_to_hereditary = yes
+	}
+	on_post_government_type_change = {
+		post_change_to_hereditary = yes
+	}
+}
