@@ -1,6 +1,16 @@
 ﻿l_english:
- gov_dalai_lama_moh: "Kashag"
- gov_dalai_lama_moh_desc: "This is a [concept_government_type] where the [concept_country] is ruled by the head of the clergy.\n\n$TRANSFER_OF_POWER_NAME_DESC$"
- gov_dalai_lama_regent: "Kashag"
- gov_dalai_lama_regent_desc: "Because the reincarnation of the [Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA$')] still hasn't been found, so the [concept_country] is ruled by the [Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA_REGENT$')].\n\n$TRANSFER_OF_POWER_NAME_DESC$"
- RULER_TITLE_DALAI_LAMA_REGENT: "Regent"
+  gov_dalai_lama_moh: "Kashag"
+  gov_dalai_lama_moh_desc: "This is a [concept_government_type] where the [concept_country] is ruled by the head of the clergy.\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  gov_dalai_lama_regent: "Kashag"
+  gov_dalai_lama_regent_desc: "Because the reincarnation of the [Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA$')] still hasn't been found, so the [concept_country] is ruled by the [Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA_REGENT$')].\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  RULER_TITLE_DALAI_LAMA_REGENT: "Regent"
+  RULER_TITLE_SON_OF_HEAVEN: "Son of Heaven"
+  RULER_TITLE_DAUGHTER_OF_HEAVEN: "Daughter of Heaven"
+  gov_confucian_theocracy: "Confucian Theocracy"
+  gov_confucian_theocracy_desc: "In this [concept_government_type], the [concept_country] is ruled by the [Concept('concept_ruler', '$RULER_TITLE_SON_OF_HEAVEN$')], who is considered to have the Mandate of Heaven and bears the sacred duty of implementing Confucian teachings in the governance of the state.\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  gov_china_feudal_empire: "Feudal Empire"
+  gov_china_feudal_empire_desc: "In this [concept_government_type], power is entirely held by the feudal [Concept('concept_ruler','$RULER_TITLE_EMPEROR$')] or [Concept('concept_ruler','$RULER_TITLE_EMPRESS$')].\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  gov_china_feudal_kingdom: "Zhuhou State"
+  gov_china_feudal_kingdom_desc: "In this [concept_government_type], power is held by the feudal [Concept('concept_ruler','$RULER_TITLE_KING$')] or [Concept('concept_ruler','$RULER_TITLE_QUEEN$')].\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  RULER_TITLE_GONGZI: "Gongzi"
+  RULER_TITLE_ZHUHOU: "Zhuhou"
