@@ -4,3 +4,13 @@
   gov_dalai_lama_regent: "噶厦"
   gov_dalai_lama_regent_desc: "由于[Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA$')]转世仍未找到，所以[concept_country]由[Concept('concept_ruler', '$RULER_TITLE_DALAI_LAMA_REGENT$')]统治。\n\n$TRANSFER_OF_POWER_NAME_DESC$"
   RULER_TITLE_DALAI_LAMA_REGENT: "摄政"
+  RULER_TITLE_SON_OF_HEAVEN: "天子"
+  RULER_TITLE_DAUGHTER_OF_HEAVEN: "女天子"
+  gov_confucian_theocracy: "儒家神权政治"
+  gov_confucian_theocracy_desc: "在这种[concept_government_type]下，[concept_country]由[Concept('concept_ruler', '$RULER_TITLE_SON_OF_HEAVEN$')]统治，其被认为是天命所归，肩负着将儒家教义贯彻于国家治理中的神圣职责。\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  gov_china_feudal_empire: "封建帝国"
+  gov_china_feudal_empire_desc: "这种[concept_government_type]下，权力完全属于封建[Concept('concept_ruler','$RULER_TITLE_EMPEROR$')]或[Concept('concept_ruler','$RULER_TITLE_EMPRESS$')]。\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  gov_china_feudal_kingdom: "诸侯国"
+  gov_china_feudal_kingdom_desc: "这种[concept_government_type]下，权力属于封建[Concept('concept_ruler','$RULER_TITLE_KING$')]或[Concept('concept_ruler','$RULER_TITLE_QUEEN$')]。\n\n$TRANSFER_OF_POWER_NAME_DESC$"
+  RULER_TITLE_GONGZI: "公子"
+  RULER_TITLE_ZHUHOU: "诸侯"
