@@ -417,6 +417,7 @@ Release 1.3 "Pivot"
 Changes:
 
 - Opium Wars remake part 2.
+- Confucian Theocracy government types.
 
 Fixes:
 
